--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="./styles.css">
     </head>
     <body>
         <nav>
@@ -19,6 +19,6 @@
             <header></header>
             <article></article>
         </main>
-        <script type="module" src="/main.js" async defer></script>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
