change src pour script js

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <article></article>
         </main>
         <script type="module" src="./main.js"></script>
+        <!-- changer l'adresse pour ./main.js-->
     </body>
 </html>
