--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <header></header>
             <article></article>
         </main>
-        <script type="module" src="./main.js"></script>
+        <script type="module" src="./App.js"></script>
         <!-- changer l'adresse pour ./main.js-->
     </body>
 </html>
